--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             overflow: hidden;
             /* Placeholder for image background on desktop - using a dark theme placeholder */
             background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                              url('https://placehold.co/1200x550/000000/FFFFFF?text=Modern+Design+Studio+View'); 
+                              url('https://placehold.co/1200x550/000000/FFFFFF?text=AyoPrime+StudioS'); 
             background-size: cover;
             background-position: center;
         }
